--- a/package.json
+++ b/package.json
@@ -6,8 +6,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.2.10",
+    "@material-ui/styles": "^4.11.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "firebase": "^8.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebaseui": "^4.1.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
